# HFT-engine

./: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1
src/: main.cpp
src/common/: time_utils.hpp  types.hpp
src/engine/: oms.cpp  oms.hpp  risk_manager.cpp  risk_manager.hpp  strategy.cpp  strategy.hpp
src/simulator/: exchange_sim.cpp  exchange_sim.hpp
tests/: run_tests.py  test_functional.py  test_performance.py  test_risk.py  test_strategy.py
tests/framework/: client.py
